Changes in 1.2.3 release

57547 Fix regression with running on older JREs
57548 Update library version number printed by Version class
57549 Fix reference to old SNAPSHOT version of taglibs-build-tools in pom files.

Changes in 1.2.2 release [WITHDRAWN due to regressions in older JREs]

57433 Double-check locking in ExpressionEvaluatorManager
57427 1.0 TLDs are missing from -compat jar
57289 XML factories should be located using the JSTL library's ClassLoader

Changes in 1.2.1 release
- Documentation cleanup

Major changes in 1.2.0 release
- Transitioned project from Apache Jakarta to Apache Tomcat
- Implementation of new functionality for JSTL 1.2; requires Java 1.5
- Switched to Maven-based build
- Renamed JARs and modified packaging structure; OSGI metadata added
- XML processing performance improved by direct use of Xalan

The following issues from Bugzilla (https://issues.apache.org/bugzilla) appear related.
However, due to the time since the last 1.1 release some issues may be missing or misclassified.

55608 fmt:bundle tag unnecessarily buffers body content
54544 Loop vars are not reset for fortoken with deferred expression
52637 Broken link
50674 Some maven pom improvments
50462 xalan import should not be optional in maven-bundle-plugin
50461 out tag's escapeXml attribute should be set as true by default
50414 tlv package cause another split package issue in impl and jstlel bundles
50266 Javadoc and import corrections
50265 FormatDateSupport.dateFormatCache lazy init is not safe
50264 Missing @Override annotations
50263 README_src.txt out of date
50250 Split package issue in impl and jstlel bundles
50064 bundle-ify the taglibs jars
49900 BundleSupport.release() does not call super.release() to clear bodyContent
49578 XPath handling only supports single reference to variable
49565 Findbugs: Util.specialCharactersRepresentation should be both final and package protected
49561 Remove proprietary URLEncoder
49554 Clean up Functions
49548 Refactoring SetSupport